syntax = "proto2";

package com.android.tools.idea.gradle.project.sync.ng.nosyncbuilder.proto;

option java_package = "com.android.tools.idea.gradle.project.sync.ng.nosyncbuilder.proto";
option java_outer_classname = "FileProto";

message File {
    enum RelativeTo {
        RELATIVE_TO_UNSPECIFIED = 0;
        MODULE = 1;
        SDK = 2;
    }
    optional string relative_path = 1; // required
    optional RelativeTo relative_to = 2; // required
}
