syntax = "proto2";

package com.android.tools.idea.gradle.project.sync.ng.nosyncbuilder.proto;

option java_outer_classname = "GradleProjectProto";

import "File.proto";

message GradleProject {
    optional GradleScript build_script = 1; // required
    optional File build_directory = 2; // required
    repeated GradleTask tasks = 3;
    optional string name = 4; // required
    optional string project_path = 5; // required
    optional string description = 6;
}

message GradleScript {
    optional File source_file = 1;
}

message ProjectIdentifier {
    // BuildIdentifier is not stored because it is a root project directory
    optional string project_path = 1; // required
}

message GradleTask {
    optional string name = 1; // required
    optional string display_name = 2; // required
    optional string path = 3; // required
    optional bool is_public = 4; //required
    optional string group = 5;
    optional string description = 6;
}
